Bug Fix
fixed bug where the content of project process will not take up rest of the space due to an invisible button

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -1,3 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+form {
+    max-width: 420px;
+    margin: 50px auto;
+}
+
 ::-webkit-scrollbar {
     width: 12px;
 }
@@ -90,7 +96,6 @@ nav {
 
 body h1 {
     font-family: 'Playfair Display', serif;
-    font-weight: medium;
     font-size: 44px;
     color: white;
 }
@@ -495,7 +500,7 @@ a:hover:after {
     align-items: center;
     padding-bottom: 15rem;
     height: 100vh;
-    width: 40%;
+    width: 50%;
     background: rgb(85, 85, 85);
 }
 
@@ -535,7 +540,7 @@ a:hover:after {
     position: relative;
     justify-content: center;
     align-self: center;
-    width: 60%;
+    width: 100%;
     backface-visibility: hidden;
     will-change: overflow;
 }
@@ -577,7 +582,6 @@ a:hover:after {
 
 .display-title {
     writing-mode: vertical-lr;
-    text-orientation: sideways-right;
     padding-top: 1rem;
     margin-bottom: 3rem;
 }
@@ -667,12 +671,6 @@ a:hover:after {
     padding-bottom: 10rem;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-form {
-    max-width: 420px;
-    margin: 50px auto;
-}
-
 .feedback-input {
     color: white;
     font-family: Helvetica, Arial, sans-serif;
@@ -724,9 +722,19 @@ textarea {
 /* Footer */
 
 footer {
+    position: relative;
     display: block;
     background: rgb(46, 46, 46);
-    height: 50px;
+    height: 75px;
+}
+
+p.copyright {
+    position: absolute;
+    width: 100%;
+    color: #fff;
+    line-height: 40px;
+    text-align: center;
+    bottom: 0;
 }
 
 
@@ -735,6 +743,9 @@ footer {
 @media only screen and (min-width: 800px) {
     .poster-content {
         margin-top: 50px;
+    }
+    .close-button {
+        display: none;
     }
     .close-button-icon {
         display: none;
